# waves-crypto

./: .eslintrc.json  .gitignore  .size-limit.json  Cargo.toml  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml  size-limit.yml
src/: aesCommon.ts  aesEcb.ts  base16.ts  base58.ts  base64.ts  blake2b.ts  createAddress.ts  createPrivateKey.ts  createPublicKey.ts  createSharedKey.ts  decryptAesEcb.ts  decryptMessage.ts  decryptSeed.ts  deriveSeedEncryptionKey.ts  encryptAesEcb.ts  encryptMessage.ts  encryptSeed.ts  generateRandomSeed.ts  hmac.ts  index.spec.ts  index.ts  initWasm.ts  keccak.ts  lib.rs  seedWords.ts  sha256.ts  signBytes.ts  utf8.ts  verifyAddress.ts  verifySignature.ts
